name:                encoder
version:             0.1
synopsis:            A simple server to break a media to multiple parts to deliver it to encoders
license:             BSD3
license-file:        LICENSE
author:              Amir Sabbaghi
maintainer:          asaba90@gmail.com
category:            Network
build-type:          Simple
cabal-version:       >=1.10

executable encoder
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.10
                     , process
                     , network-simple
                     , bytestring
                     , optparse-applicative < 0.13
  hs-source-dirs:      src
  default-language:    Haskell2010

