name:                encoder
version:             0.1
synopsis:            A simple server to break a media to multiple parts to deliver it to encoders
license:             BSD3
license-file:        LICENSE
author:              Amir Sabbaghi
maintainer:          asaba90@gmail.com
category:            Network
build-type:          Simple
cabal-version:       >=1.10

executable encoder
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , process
                     , directory
                     , network-simple
                     , bytestring
                     , optparse-applicative < 0.13
                     , stm
  default-language:    Haskell2010

